--- a/projects/ngx-translate-all-pipe/package.json
+++ b/projects/ngx-translate-all-pipe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-translate-all-pipe",
-  "version": "9.0.0",
+  "version": "12.0.1",
   "description": "ngx-translate extension to translate multiple values at once",
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "url": "https://github.com/b4rd/ngx-translate-all-pipe/issues"
   },
   "peerDependencies": {
-    "@angular/core": "^9.1.0",
+    "@angular/core": ">=10.0.0",
     "@ngx-translate/core": ">8.0.0"
   }
 }
